--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,47 +6,53 @@
     <title>My First Cool Webpage</title>
   </head>
   <body>
-    <h1>Welcome to My First Webpage!</h1>
+    <header>
+      <h1>Welcome to My First Webpage!</h1>
+      <nav>
+        <a href="tweets.html">Check out my favorite tweets →</a>
+      </nav>
+    </header>
 
-    <h2>About This Page</h2>
-    <p>
-      This is my first attempt at creating a complete HTML webpage. I'm learning
-      how to structure content properly with different heading levels,
-      paragraphs, and even clickable images!
-    </p>
+    <main>
+      <h2>About This Page</h2>
+      <p>
+        This is my first attempt at creating a complete HTML webpage. I'm
+        learning how to structure content properly with different heading
+        levels, paragraphs, and even clickable images!
+      </p>
 
-    <h2>Why I'm Learning Web Development</h2>
-    <p>
-      Web development is an essential skill in today's digital world. By
-      learning HTML, I'm taking my first steps toward becoming a full-stack
-      developer. The ALX program is helping me gain these valuable skills.
-    </p>
+      <h2>Why I'm Learning Web Development</h2>
+      <p>
+        Web development is an essential skill in today's digital world. By
+        learning HTML, I'm taking my first steps toward becoming a full-stack
+        developer. The ALX program is helping me gain these valuable skills.
+      </p>
+      <h3>My Current Focus</h3>
+      <p>
+        Right now, I'm focusing on mastering the basics of HTML. This includes
+        understanding how to properly structure a webpage with semantic elements
+        and create meaningful content hierarchies.
+      </p>
 
-    <h3>My Current Focus</h3>
-    <p>
-      Right now, I'm focusing on mastering the basics of HTML. This includes
-      understanding how to properly structure a webpage with semantic elements
-      and create meaningful content hierarchies.
-    </p>
+      <h3>Future Goals</h3>
+      <p>
+        After mastering HTML, I plan to move on to CSS to make my webpages
+        visually appealing, and then JavaScript to add interactivity.
+        Eventually, I want to build complete web applications!
+      </p>
 
-    <h3>Future Goals</h3>
-    <p>
-      After mastering HTML, I plan to move on to CSS to make my webpages
-      visually appealing, and then JavaScript to add interactivity. Eventually,
-      I want to build complete web applications!
-    </p>
+      <h2>Check Out ALX</h2>
+      <a href="https://www.alxafrica.com" target="_blank">
+        <img
+          src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+          alt="ALX Logo"
+          width="200"
+        />
+      </a>
+    </main>
 
-    <h2>Check Out ALX</h2>
-    <a href="https://www.alxafrica.com" target="_blank">
-      <img
-        src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-        alt="ALX Logo"
-        width="200"
-      />
-    </a>
-    <p>
-      Click on the ALX logo above to visit their official website and learn more
-      about their programs!
-    </p>
+    <footer>
+      <p>Explore my <a href="tweets.html">tweets collection</a></p>
+    </footer>
   </body>
 </html>
