edit for the checker

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,52 +7,38 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to My First Webpage!</h1>
-      <nav>
-        <a href="tweets.html">Check out my favorite tweets →</a>
-      </nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
     </header>
 
     <main>
-      <h2>About This Page</h2>
-      <p>
-        This is my first attempt at creating a complete HTML webpage. I'm
-        learning how to structure content properly with different heading
-        levels, paragraphs, and even clickable images!
-      </p>
+      <article>
+        <h1>Welcome to My First Webpage!</h1>
+        <h2>About This Page</h2>
+        <p>This is my first HTML webpage with proper structure.</p>
 
-      <h2>Why I'm Learning Web Development</h2>
-      <p>
-        Web development is an essential skill in today's digital world. By
-        learning HTML, I'm taking my first steps toward becoming a full-stack
-        developer. The ALX program is helping me gain these valuable skills.
-      </p>
-      <h3>My Current Focus</h3>
-      <p>
-        Right now, I'm focusing on mastering the basics of HTML. This includes
-        understanding how to properly structure a webpage with semantic elements
-        and create meaningful content hierarchies.
-      </p>
-
-      <h3>Future Goals</h3>
-      <p>
-        After mastering HTML, I plan to move on to CSS to make my webpages
-        visually appealing, and then JavaScript to add interactivity.
-        Eventually, I want to build complete web applications!
-      </p>
-
-      <h2>Check Out ALX</h2>
-      <a href="https://www.alxafrica.com" target="_blank">
-        <img
-          src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-          alt="ALX Logo"
-          width="200"
-        />
-      </a>
+        <h3>My Current Focus</h3>
+        <p>Learning HTML semantics and structure.</p>
+        <a href="https://www.alxafrica.com" target="_blank">
+          <img
+            src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+            alt="ALX Logo"
+            width="200"
+          />
+        </a>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
     </main>
 
     <footer>
-      <p>Explore my <a href="tweets.html">tweets collection</a></p>
+      <p>
+        Made by Your Name -
+        <a href="https://example.com" target="_blank">here</a>
+      </p>
     </footer>
   </body>
 </html>
