--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -7,53 +7,33 @@
   </head>
   <body>
     <header>
-      <h1>My Favorite Tweets</h1>
-      <a href="index.html">← Back to Homepage</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
     </header>
 
     <main>
       <article>
-        <h2>ALX Africa Tweet</h2>
         <blockquote class="twitter-tweet">
-          <p lang="en" dir="ltr">
-            The future of Africa depends on its youth getting the right skills
-            for the digital economy. At ALX, we're training the next generation
-            of African tech leaders. Join us!
-            <a
-              href="https://twitter.com/hashtag/ALXSE?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#ALXSE</a
-            >
-          </p>
-          &mdash; ALX (@alx_africa)
-          <a
-            href="https://twitter.com/alx_africa/status/1234567890123456789?ref_src=twsrc%5Etfw"
-            >March 21, 2023</a
+          <p lang="en" dir="ltr">Example tweet text here</p>
+          &mdash; Twitter User (@username)
+          <a href="https://twitter.com/username/status/123456789"
+            >Month Day, Year</a
           >
         </blockquote>
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
+        <script async src="https://platform.twitter.com/widgets.js"></script>
       </article>
-
-      <article>
-        <h2>Tech Inspiration</h2>
-        <blockquote class="twitter-tweet">
-          <p lang="en" dir="ltr">
-            The best way to predict the future is to invent it. - Alan Kay
-          </p>
-          &mdash; Tech Quotes (@TechInspiration)
-          <a
-            href="https://twitter.com/TechInspiration/status/987654321098765432?ref_src=twsrc%5Etfw"
-            >January 15, 2023</a
-          >
-        </blockquote>
-      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
     </main>
 
     <footer>
-      <p>Visit my <a href="index.html">homepage</a> for more content</p>
+      <p>
+        Made by Your Name -
+        <a href="https://example.com" target="_blank">here</a>
+      </p>
     </footer>
   </body>
 </html>
